--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,13 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
+<!-- 本当は必要なページだけに追加すべきですが，本題ではないのでここに追加します -->
+<!-- 全ページにナビバーを追加 -->
+<%= render 'shared/header' %>
+<!-- ログイン関連ページ以外にフラッシュ表示部分を追加 -->
+<% if controller_name == 'graphs' %>
+<%= render 'shared/flash_messages' %>
+<% end %>
 
 <body>
     <div class="graph-container">
