--- a/app/views/graphs/index.html.erb
+++ b/app/views/graphs/index.html.erb
@@ -1,5 +1,20 @@
 <%= Gon::Base.render_data %>
 
-<p class="mt-4">折れ線グラフが表示されていれば，「Chart.js」の導入はOKです</p>
-<canvas id="line-chart"></canvas>
+<div class="row">
+    <div class="col-6 col-sm-3">
+        <input type="button" value="過去１週間" id="a-week-button" class="btn btn-success btn-block mt-3">
+    </div>
+    <div class="col-6 col-sm-3">
+        <input type="button" value="過去２週間" id="two-weeks-button" class="btn btn-success btn-block mt-3">
+    </div>
+    <div class="col-6 col-sm-3">
+        <input type="button" value="過去１ヶ月" id="a-month-button" class="btn btn-success btn-block mt-3">
+    </div>
+    <div class="col-6 col-sm-3">
+        <input type="button" value="過去３ヶ月" id="three-months-button" class="btn btn-success btn-block mt-3">
+    </div>
+</div>
+<!-- ********** 以上を追加 ********** -->
+<!-- ********** 次にクラスを追加 ********** -->
+<canvas id="chart-weight" class="mt-5"></canvas>
 ​
