--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,3 +20,10 @@ div.alert-notice {
 div.alert-alert {
   @extend .alert-danger;
 }
+
+// モーダル
+
+button.close {
+  overflow: hidden;
+  outline: none;
+}
